@@ -1,3 +1,8 @@
+2005-09-17  John Finlay  <finlay@moeraki.com>
+
+	* newsitems.py
+	* reference.src: Add info about ref 2.8.1
+
 2005-09-15  Rafael Villar Burke  <pachi@mmn-arquitectos.com>
 
         * applications.src: Added QA-Assistant
